Responsived design and spacing fix
Fixed responsive design and spacing.

--- a/main.css
+++ b/main.css
@@ -303,3 +303,7 @@ navbar navbar-expand-sm navbar-dark{
   color:#BBE1FA;
 }
 
+.card .btn{
+  margin-top:10px;
+}
+
